fix(deps): bump the all-deps group with 22 updates (#92)
* fix(deps): bump the all-deps group with 22 updates

Bumps the all-deps group with 22 updates:

| Package | From | To |
| --- | --- | --- |
| [org.apache.logging.log4j:log4j-bom](https://github.com/apache/logging-log4j2) | `2.24.3` | `2.26.1` |
| io.vertx:vertx-stack-depchain | `5.0.5` | `5.1.5` |
| [org.springframework:spring-framework-bom](https://github.com/spring-projects/spring-framework) | `7.0.6` | `7.0.8` |
| [org.mockito:mockito-core](https://github.com/mockito/mockito) | `5.21.0` | `5.23.0` |
| [org.apache.maven.plugins:maven-compiler-plugin](https://github.com/apache/maven-compiler-plugin) | `3.14.0` | `3.15.0` |
| [org.codehaus.mojo:versions-maven-plugin](https://github.com/mojohaus/versions) | `2.18.0` | `2.21.0` |
| [org.apache.maven.plugins:maven-surefire-plugin](https://github.com/apache/maven-surefire) | `3.5.4` | `3.5.6` |
| [org.codehaus.mojo:exec-maven-plugin](https://github.com/mojohaus/exec-maven-plugin) | `3.5.0` | `3.6.3` |
| [org.apache.maven.plugins:maven-resources-plugin](https://github.com/apache/maven-resources-plugin) | `3.3.1` | `3.5.0` |
| [org.apache.maven.plugins:maven-release-plugin](https://github.com/apache/maven-release) | `3.1.1` | `3.3.1` |
| [org.codehaus.mojo:build-helper-maven-plugin](https://github.com/mojohaus/build-helper-maven-plugin) | `3.6.0` | `3.6.1` |
| [io.rest-assured:rest-assured](https://github.com/rest-assured/rest-assured) | `5.5.1` | `6.0.1` |
| [com.github.ben-manes.caffeine:caffeine](https://github.com/ben-manes/caffeine) | `3.2.0` | `3.2.4` |
| [org.wiremock:wiremock](https://github.com/wiremock/wiremock) | `3.12.1` | `3.13.2` |
| [org.testcontainers:junit-jupiter](https://github.com/testcontainers/testcontainers-java) | `1.20.6` | `1.21.4` |
| [org.aspectj:aspectjrt](https://github.com/eclipse/org.aspectj) | `1.9.22.1` | `1.9.25.1` |
| [org.aspectj:aspectjtools](https://github.com/eclipse/org.aspectj) | `1.9.22.1` | `1.9.25.1` |
| [org.codehaus.mo